--- a/version_manifest.json
+++ b/version_manifest.json
@@ -1,10 +1,12 @@
 {
   "versions": [
     {
+      "name": "alp_v1.0.1  ",
+      "display_name": "Alpha V1.0.1"
+    },
+    {
       "name": "alp_v1.0.0",
-      "type": "release",
-      "display_name": "Alpha V1.0.0",
-      "releaseTime": "2023-08-30T11:24:35+00:00"
+      "display_name": "Alpha V1.0.0"
     }
   ]
 }
