--- a/version_manifest.json
+++ b/version_manifest.json
@@ -11,6 +11,10 @@
     {
       "name": "pre-alp_v1",
       "display_name": "Pre-Alpha V1"
+    },
+    {
+      "name": "enescraft_v0.2",
+      "display_name": "EnesCraft v0.2"
     }
   ]
 }
