--- a/version_manifest.json
+++ b/version_manifest.json
@@ -13,7 +13,7 @@
     {
       "name": "pre-alp_v1",
       "display_name": "Pre-Alpha V1",
-      "launcher":"com.emirenesgames.stealcraft.StealCraft"
+      "launcher":"com.emirenesgames.stealcraft.Stealcraft"
     },
     {
       "name": "enescraft_v0.2",
